RESOLVED FIXED208033
[iOS] Fix media related sandbox issues in the GPU Process
https://bugs.webkit.org/show_bug.cgi?id=208033
Summary [iOS] Fix media related sandbox issues in the GPU Process
Per Arne Vollan
Reported 2020-02-20 15:20:42 PST
Fix observed sandbox violations related to media playback.
Attachments
Patch (3.15 KB, patch)
2020-02-20 15:33 PST, Per Arne Vollan
no flags
Patch (2.85 KB, patch)
2020-02-20 15:36 PST, Per Arne Vollan
no flags
Patch (2.85 KB, patch)
2020-02-20 18:21 PST, Per Arne Vollan
eric.carlson: review+
Patch (2.87 KB, patch)
2020-02-20 18:34 PST, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2020-02-20 15:33:15 PST
Per Arne Vollan
Comment 2 2020-02-20 15:36:38 PST
Per Arne Vollan
Comment 3 2020-02-20 18:21:24 PST
Eric Carlson
Comment 4 2020-02-20 18:26:52 PST
Comment on attachment 391368 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=391368&action=review > Source/WebKit/UIProcess/GPU/GPUProcessProxy.cpp:289 > + if (!parameters.mediaCacheDirectory.isEmpty()) { > + String parentFolder = parameters.mediaCacheDirectory; > + if ((auto position = parentFolder.reverseFind("/")) != notFound) > + parentFolder = parentFolder.substring(0, position); > + SandboxExtension::createHandleWithoutResolvingPath(parentFolder, SandboxExtension::Type::ReadWrite, parameters.mediaCacheDirectorySandboxExtensionHandle); > + } Two things: - I think it would be better to do this in the WebProcess, this process should just use the path provided. - This shouldn't be necessary at all, please file a bug about the media framework behavior.
Per Arne Vollan
Comment 5 2020-02-20 18:34:38 PST
Per Arne Vollan
Comment 6 2020-02-20 18:35:46 PST
(In reply to Eric Carlson from comment #4) > Comment on attachment 391368 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=391368&action=review > > > Source/WebKit/UIProcess/GPU/GPUProcessProxy.cpp:289 > > + if (!parameters.mediaCacheDirectory.isEmpty()) { > > + String parentFolder = parameters.mediaCacheDirectory; > > + if ((auto position = parentFolder.reverseFind("/")) != notFound) > > + parentFolder = parentFolder.substring(0, position); > > + SandboxExtension::createHandleWithoutResolvingPath(parentFolder, SandboxExtension::Type::ReadWrite, parameters.mediaCacheDirectorySandboxExtensionHandle); > > + } > > Two things: > - I think it would be better to do this in the WebProcess, this process > should just use the path provided. > - This shouldn't be necessary at all, please file a bug about the media > framework behavior. Thanks for reviewing! I will file a bug about the media framework behavior.
WebKit Commit Bot
Comment 7 2020-02-21 08:27:58 PST
Comment on attachment 391369 [details] Patch Clearing flags on attachment: 391369 Committed r257135: <https://trac.webkit.org/changeset/257135>
Radar WebKit Bug Importer
Comment 8 2020-02-26 13:11:13 PST
Note You need to log in before you can comment on or make changes to this bug.