[iOS] Fix media related sandbox issues in the GPU process https://bugs.webkit.org/show_bug.cgi?id=208033

Reviewed by Eric Carlson.

The mach lookup sandbox extension to 'com.apple.tccd' needs to be created with the method SandboxExtension::createHandleForMachLookup.
The file read-write sandbox extension to the media cache directory needs to be created with the parent folder of the actual cache folder,
since the media frameworks also seem to access files there.

No new tests, covered by existing tests.

* UIProcess/GPU/GPUProcessProxy.cpp:
(WebKit::GPUProcessProxy::singleton):
(WebKit::gpuProcessSessionParameters):


Canonical link: https://commits.webkit.org/221022@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257135 268f45cc-cd09-0410-ab3c-d52691b4dbfc